--- a/app/src/main/res/layout/sports_item_row.xml
+++ b/app/src/main/res/layout/sports_item_row.xml
@@ -33,10 +33,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="@dimen/_5dp"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="@dimen/_3dp">
+            android:layout_margin="@dimen/_5dp"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/teamneName"
@@ -44,6 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text=""
+                android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_12dp"
                 android:textStyle="bold" />
